# pcloud-cat

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: docs.yml
pcloud-cat-core/: Cargo.toml
pcloud-cat-core/src/: algebra.rs  anomaly.rs  cloud.rs  error.rs  io_formats.rs  lib.rs  normal.rs  registration.rs
pcloud-cat-core/tests/: algebra_tests.rs  normal_anomaly_tests.rs  registration_tests.rs
pcloud-cat-viewer/: Cargo.toml
pcloud-cat-viewer/src/: algebra.rs  camera.rs  color_map.rs  error.rs  lib.rs  renderer.rs
