[package]
name = "pcloud-cat-viewer"
version = "0.1.0"
edition = "2024"
description = "WASM-based 3D point cloud viewer using WebGL2"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pcloud-cat-core = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "Window",
    "Document",
    "Element",
    "MouseEvent",
    "WheelEvent",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
manual_map = "warn"
